docs: Adicionado docs Login de Autenticação e Token JWT
